UMA uploads to localhost are no longer encrypted.

To allow testing with a local collector (that has decryption disabled),
we no longer encrypt HTTP UMA uploads if the destination is localhost.

Bug: 849127
Change-Id: Ied550633e7c11724bb6f61932963914b09560978
Reviewed-on: https://chromium-review.googlesource.com/1091274
Reviewed-by: Alexei Svitkine <asvitkine@chromium.org>
Commit-Queue: Carlos IL <carlosil@chromium.org>
Cr-Commit-Position: refs/heads/master@{#565436}