components/metrics/net/net_metrics_log_uploader.cc
@@ -13,6 +13,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "components/encrypted_messages/message_encrypter.h"
 #include "components/metrics/metrics_log_uploader.h"
 #include "net/base/load_flags.h"
+#include "net/base/url_util.h"
 #include "net/traffic_annotation/network_traffic_annotation.h"
 #include "net/url_request/url_fetcher.h"
 #include "third_party/metrics_proto/reporting_info.pb.h"
@@ -196,8 +197,10 @@ void NetMetricsLogUploader::UploadLogToURL(
                                                          service);
   current_fetch_->SetRequestContext(request_context_getter_);
   std::string reporting_info_string = SerializeReportingInfo(reporting_info);
-  // If we are not using HTTPS for this upload, encrypt it.
-  if (!url.SchemeIs(url::kHttpsScheme)) {
+  // If we are not using HTTPS for this upload, encrypt it. We do not encrypt
+  // requests to localhost to allow testing with a local collector that doesn't
+  // have decryption enabled.
+  if (!url.SchemeIs(url::kHttpsScheme) && !net::IsLocalhost(url)) {
     std::string encrypted_message;
     if (!EncryptString(compressed_log_data, &encrypted_message)) {
       current_fetch_.reset();
